--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
         <div class="cell" data-cell-index="7"></div>
         <div class="cell" data-cell-index="8"></div>
     </div>
+    <div class="gameover-message" id="gameover-message">
+        <div data-gameover-message-text></div>
+        <button id="restartButton">Restart</button>
+    </div>
 </body>
 </html>
