Final working code for tic-tac-toe

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Tokyo+Zoo&display=swap" rel="stylesheet">
+
     <title>Tic Tac Toe</title>
 </head>
 <body>
+    <h1>TIC-TAC-TOE</h1>
     <div class="board" id="board">
         <div class="cell" data-cell-index="0"></div>
         <div class="cell" data-cell-index="1"></div>
